<resources>
    <string name="app_name">Billbox</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="billbox">Billbox</string>
    <string name="hello_user"> \'משתמש\'</string>
    <string name="button">Button</string>
    <string name="my_last_docs">המסמכים האחרונים שלי</string>
    <string name="im_bussines">אני עסק</string>
    <string name="im_customer">אני לקוח</string>
    <string name="title_activity_create_bill">ScrollingActivity</string>
    <string name="large_text">



        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="finishBill">סיים</string>
    <string name="bill">חשבונית מס-קבלה</string>
    <string name="openAccount">פתיחת חשבון</string>
    <string name="test1">test1</string>
    <string name="NavigationDrawerOpen">openNavDrawer</string>
    <string name="closeNavDrawer">closeNavDrawer</string>
    <string name="findP">חפש מוצר</string>
    <string name="enter_phone">הכנס מספר טלפון</string>
    <string name="purchaseDate">תאריך רכישה</string>
    <string name="warrantyDuration">משך האחריות</string>
    <string name="address">כתובת</string>
    <string name="businessName">שם עסק</string>
    <string name="ok">אישור</string>
    <string name="countinue">המשך</string>
    <string name="rememberME">זכור אותי</string>
    <string name="total">סה"כ</string>
    <string name="price">מחיר</string>
    <string name="amount">כמות</string>
    <string name="description">תיאור</string>
    <string name="cost">cost</string>
    <string name="total_to_pay">סה\"כ לתשלום: 0</string>
    <string name="business_info">פרטי העסק</string>
    <string name="addToInventory">הוסף מוצר למלאי</string>
    <string name="insert_name">הכנס שם פרטי</string>
    <string name="insert_last_name">הכנס שם משפחה</string>
    <string name="insert_email">הכנס כתובת מייל</string>
    <string name="insert_phone">הכנס מספר טלפון</string>
    <string name="insert_pass">בחר סיסמה</string>
    <string name="again_pass">אימות סיסמה</string>
    <string name="continue1">המשך</string>
    <string name="ImAgree">אני מסכים לתנאי השימוש</string>
    <string name="insert_product_name">הכנס תיאור מוצר</string>
    <string name="insertBarcode">הכנס מספר ברקוד</string>
    <string name="insert_price">הכנס מחיר</string>
    <string name="agreeForTerms">אני מסכים לתנאי השימוש</string>
    <string name="verPassword">אימות סיסמה</string>
    <string name="enterEmail">הכנס כתובת מייל</string>
    <string name="enterAddress">הכנס כתובת</string>
    <string name="enterPassword">בחר סיסמה</string>
    <string name="enterLastName">הכנס שם משפחה</string>
    <string name="enterFirstName">הכנס שם פרטי</string>
    <string name="add">הוסף</string>
    <string name="taxes">מע\"מ 17%:</string>
    <string name="cash">מזומן</string>
    <string name="notes">הערות:</string>
    <string name="textview">TextView</string>
    <string name="pay_with">שולם ב:</string>
    <string name="receipt">חשבונית מס-קבלה</string>
    <string name="warranty">תעודת אחריות</string>
    <string name="replacement">החלפה</string>
    <string name="refund">זיכוי כספי</string>
    <string name="add_product">הוסף מוצר</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">התחבר</string>
    <string name="loginwithgoogle">התחבר עם Google</string>
    <string name="search_document">חיפוש מסמך</string>
    <string name="data">נתונים</string>
    <string name="pick_date">בחר תאריך</string>
    <string name="purchase_date">תאריך רכישה:</string>
    <string name="create_manual_receipt">צור חשבונית ידנית</string>
    <string name="take_picture_of_receipt">צלם את החשבונית</string>
    <string name="enter_business_name">הכנס שם עסק</string>
    <string name="paid">סכום שולם</string>
    <string name="pick_purchase_date">בחר תאריך קנייה</string>
    <string name="search_or_sort_docs">חפש או סנן מסמכים</string>
    <string name="filter">סינון</string>
    <string name="warranties">תעודות אחריות</string>
    <string name="search_receipt">חפש חשבונית</string>
    <string name="validity_until">תוקף עד</string>
    <string name="barcode">ברקוד</string>
    <string name="phone">טלפון</string>
    <string name="save">שמור</string>
    <string name="notes_on_bill">הערות ע\"ג החשבונית:</string>
    <string name="you_can_edit_info">ביכולתך לערוך את המידע שיופיע ע\"ג המסמכים</string>
    <string name="payment_method">שיטת תשלום</string>
    <string name="insert_credit_number">הכנס מספר אשראי</string>
    <string name="insert_credit_date">הכנס תוקף</string>
    <string name="insert_credit_cvv">CVV</string>
    <string name="choose_payment_method">בחר שיטת תשלום</string>
    <string name="logout">התנתק</string>
    <string name="settings">הגדרות</string>
    <string name="app">APP</string>
    <string name="storage">STORAGE</string>
    <string name="filter_by">סנן לפי:</string>
    <string name="search">חפש</string>
    <string-array name="payment_method">
        <item>"מזומן"</item>
        <item>"אשראי"</item>
    </string-array>
</resources>