<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="STORAGAE">
        <menu>
            <item
                android:id="@+id/searchDocumentBusinessMenu"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/search_receipt" />
            <item
                android:id="@+id/data_menu_business"
                android:icon="@drawable/data_ic"
                android:title="@string/data" />
        </menu>
    </item>

    <item android:title="APP">
        <menu>
            <item android:title="@string/settings"
                android:icon="@drawable/settings_ic" />
            <item android:title="@string/logout"
                android:icon="@drawable/logout" />
        </menu>
    </item>
</menu>