<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="STORAGAE">
    <menu>
        <item
            android:id="@+id/searchDocumentCustomerMenu"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search_receipt" />
        <item
            android:id="@+id/createDocumentCustomerMenu"
            android:icon="@drawable/create"
            android:title="@string/create_manual_receipt" />
        <item
            android:id="@+id/warranties"
            android:icon="@drawable/ic_warranty"
            android:title="@string/warranties" />
        <item android:title="Backup"
            android:icon="@drawable/menu_icon" />
    </menu>
</item>
    
<item android:title="APP">
    <menu>
        <item android:title="Settings"
            android:icon="@drawable/menu_icon" />
        <item android:title="Log Out"
            android:icon="@drawable/menu_icon" />
    </menu>
</item>
</menu>