<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#7DDA8A"
        app:layout_anchor="@+id/appBarLayout"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/finishbt"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_margin="12dp"
                android:background="@drawable/finishbill"
                android:text="@string/finishBill"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/billText"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_centerInParent="true"
                android:text="@string/warranty"
                android:textSize="23sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardValues"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_above="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-110dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="270dp"
                android:text="@string/description"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/amount"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:text="@string/price"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/total"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="110dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/dateValues"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/purchaseDate"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="181dp"
                android:gravity="center"
                android:text="@string/purchaseDate"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/warrantyDuration"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/warrantyDuration"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>