<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#4DB351"
        app:layout_anchor="@+id/appBarLayout"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/billText"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_centerInParent="true"
                android:text="@string/bill"
                android:textSize="23sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardValues"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_above="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-160dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:text="@string/total"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="235dp"
                android:text="@string/price"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:text="@string/amount"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/description"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/add_bt"
            android:text="@string/findP"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:layout_marginTop="170dp">

        <ListView
            android:id="@+id/productsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#33BF39"
        app:layout_scrollFlags="scroll|enterAlways">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalToPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginStart="190dp"
                android:textSize="24sp"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalView"
                android:text="@string/total_to_pay"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="25dp"
                android:layout_centerVertical="true">
            </TextView>

            <Button
                android:id="@+id/finishbt"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@drawable/finishbill"
                android:text="@string/finishBill"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="270dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.circularreveal.CircularRevealRelativeLayout>