<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="50dp">

    <EditText
        android:id="@+id/insertNameProduct"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/edt_back"
        android:hint="@string/insert_product_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119">

    </EditText>

    <EditText
        android:id="@+id/insertBarcodProduct"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/edt_back"
        android:hint="@string/insertBarcode"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357">

    </EditText>

    <EditText
        android:id="@+id/insertPriceOfProduct"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints="0"
        android:background="@drawable/edt_back"
        android:hint="@string/insert_price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603">

    </EditText>

    <Button
        android:id="@+id/addFromDialog"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="#7DDA8A"
        android:text="@string/add"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

</androidx.constraintlayout.widget.ConstraintLayout>