<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="50dp">

    <TextView
        android:layout_width="194dp"
        android:layout_height="53dp"
        android:text="@string/filter_by"
        app:layout_constraintBottom_toTopOf="@+id/insertNameProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <EditText
        android:id="@+id/filterByBusiness"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/edt_back"
        android:gravity="center"
        android:hint="@string/businessName"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"></EditText>

    <TextView
        android:id="@+id/filterByDate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/edt_back"
        android:gravity="center"
        android:hint="@string/purchaseDate"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"></TextView>

    <Button
        android:id="@+id/doneFilter"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="#7DDA8A"
        android:text="@string/search"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />
</androidx.constraintlayout.widget.ConstraintLayout>